# PMDK-IC

./: PMEM_NOTES  README  run.sh  source.sh
Immutable-Datastructure-c++/: CMakeLists.txt  a.out  bench.cpp  compile.sh  run_memcached.sh  source.sh  temp.patch
Immutable-Datastructure-c++/build_vacation/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
Immutable-Datastructure-c++/canneal/: .netlist.h.swp  .netlist_elem.h.swp  CMakeLists.txt  Makefile  MersenneTwister.h  annealer_thread.cpp  changes.txt  main.cpp  main.patch  netlist.cpp  netlist.h  netlist.patch  netlist_elem.cpp  netlist_elem.h  part_main.patch
Immutable-Datastructure-c++/example/: m5op_x86.S
Immutable-Datastructure-c++/gem5-util-m5/: m5
Immutable-Datastructure-c++/immer/: .vector_transient.hpp.swp  concurrent_map.hpp  nvm_utils.hpp  queue.hpp
Immutable-Datastructure-c++/memcached-1.2.4/: CMakeLists.txt  assoc.h  items.c  items.h  memcached.c  memcached.h  new_assoc.cpp  slabs.c  thread.c
Immutable-Datastructure-c++/memcached-1.2.4/no_flush/: CMakeLists.txt
Immutable-Datastructure-c++/stamp-kozy/: .manager.h.swp  CMakeLists.txt  list.c  list.h  map.h  tm.h
Immutable-Datastructure-c++/temp-memcach/: CMakeLists.txt  assoc.c  items.c  items.h  memcached.c  memcached.h  stats.c  thread.c
Immutable-Datastructure-c++/vacation/: CMakeLists.txt  box.hpp  client.hpp  constants.hpp  customer.cpp  customer.hpp  manager.cpp  manager.hpp  reservation.cpp  reservation.hpp  util.hpp  vacation.cpp
Immutable-Datastructure-c++/vacation/no_flush/: CMakeLists.txt
benchmarks/: .gitignore  .map.mem.swp  .run_tx_overheads.sh.swp  Makefile  Makefile-1.4  a.out  advanced_bench.cpp  bench-old  bench-reinterpret  bench.cpp  checker.py  concurrent_array.hpp  control_hw_prefetch.sh  immer_benchmark.sh  immer_expensive.sh  immer_memory.old  log.err  memory_usage.cpp  old_bench  ordering_vs_concurrency.sh  pmdk_memory.old  pmdk_memory.sh  pmdk_overheads.sh  run.sh  run_14.sh  run_all.sh  run_applications.sh  run_applications_misses.sh  run_flushing.sh  run_immer.sh  run_log14.sh  run_memory_usage.sh  run_misses.sh  run_mixed_all.sh  run_ordering.sh  run_queue2.sh  run_refs_misses.sh  run_temp.sh  run_tx_overheads.sh  source.sh  (+3 more)
memslap/clients/: compile.sh  memslap.c  ms_conn.c  ms_conn.h  ms_setting.c  ms_stats.c  ms_task.c  ms_thread.c
nvm_malloc/: Makefile  a.out  compile.sh  perf.data  perf.data.old
nvm_malloc/src/: .types.h.swp  arena.c  chunk.c  nvm_malloc.c  util.h
vacation-pmdk/: manager.cpp
(+131 files in other folders)
